OpenJMLTest/test/tcWithJml/expected
test/tcWithJml/TCWithJml.jml:6: error: The method TCWithJml.mm() in the specification matches a Java method with different modifiers: public protected
    protected Object mm(); // Error - different modifiers
                     ^
test/tcWithJml/TCWithJml.java:5: error: Associated declaration: test/tcWithJml/TCWithJml.jml:6:
    public Object mm() { return null; }
                  ^

// Missing duplicate annotation line 14

test/tcWithJml/TCWithJml.jml:17: error: A declaration may not be both non_null and nullable
    /*@ non_null nullable */ // Error - conflicting annotations
                 ^
test/tcWithJml/TCWithJml.jml:20: error: This JML modifier is not allowed for a method declaration
    @Monitored // Error - modifier not allowed
    ^
test/tcWithJml/TCWithJml.jml:23: error: This JML modifier is not allowed for a method declaration
    /*@ monitored */  // Error - modifier not allowed
        ^
test/tcWithJml/TCWithJml.jml:26: error: The field TCWithJml.f in the specification matches a Java field with different modifiers: final
    int f;   // Error - different modifiers
        ^
test/tcWithJml/TCWithJml.java:19: error: Associated declaration: test/tcWithJml/TCWithJml.jml:26:
    final int f;
              ^
              
// Missing duplicate annotation line 28, line 29

test/tcWithJml/TCWithJml.jml:30: error: This JML modifier is not allowed for a field declaration
    @Pure Object f3;   // Error - annotation not allowed
    ^
test/tcWithJml/TCWithJml.jml:31: error: This JML modifier is not allowed for a field declaration
    /*@ pure */ Object f3a;  // Error - annotation not allowed
        ^
test/tcWithJml/TCWithJml.jml:34: error: The method TCWithJml.m(int,int,int,int) in the specification matches a Java method with different modifiers: public protected
    protected static Object m( int i, final int j, int k, final int l);  // Error - different modifiers (3 places)
                            ^
test/tcWithJml/TCWithJml.java:27: error: Associated declaration: test/tcWithJml/TCWithJml.jml:34:
    public static Object m(final int i, int j, int k, final int l) {
                         ^
test/tcWithJml/TCWithJml.jml:34: error: The parameter i has different modifiers in the .java and .jml files: final
    protected static Object m( int i, final int j, int k, final int l);  // Error - different modifiers (3 places)
                                   ^
test/tcWithJml/TCWithJml.java:27: error: Associated declaration: test/tcWithJml/TCWithJml.jml:34:
    public static Object m(final int i, int j, int k, final int l) {
                                     ^
test/tcWithJml/TCWithJml.jml:34: error: The parameter j has different modifiers in the .java and .jml files: final
    protected static Object m( int i, final int j, int k, final int l);  // Error - different modifiers (3 places)
                                                ^
test/tcWithJml/TCWithJml.java:27: error: Associated declaration: test/tcWithJml/TCWithJml.jml:34:
    public static Object m(final int i, int j, int k, final int l) {
                                            ^
test/tcWithJml/TCWithJml.java:44: warning: Annotations in a .java file are superseded (and ignored) by the specifications in the corresponding .jml file: @org.jmlspecs.annotation.Pure on class AA
@Pure
^
test/tcWithJml/TCWithJml.jml:48: error: The type BB in the specification matches a Java type with different modifiers: final
class BB {} // Error - different modifiers
^
test/tcWithJml/TCWithJml.java:47: error: Associated declaration: test/tcWithJml/TCWithJml.jml:48:
final class BB {}
      ^
test/tcWithJml/TCWithJml.jml:52: error: A declaration may not be both non_null_by_default and nullable_by_default
@NonNullByDefault @NullableByDefault class DD {}  // Error - duplicate annotations
                  ^
18 errors
1 warning
